# GitStore

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE5_PROGRESS.md  README.md  STATUS.md  buf.gen.rust.yaml  compose.admin.yml  compose.opa.yml  compose.scylla.yml  compose.yml  go.work  go.work.sum  skills-lock.json
.githooks/: commit-msg  pre-commit
admin-ui/: .gitignore  astro.config.mjs  codegen.yml  package-lock.json  package.json  playwright.config.ts
api/: Dockerfile  generate.go  go.mod  go.sum  gqlgen.yml
docker/: admin-ui.Dockerfile  admin.Dockerfile  api.Dockerfile  controller-manager.Dockerfile  git-server.Dockerfile  git-service.Dockerfile
docs/: admin.md  ideas.md  (+11 more)
gitstore-git-service/: .env.example  Cargo.toml  README.md  build.rs
gitstore-git-service/src/: config.rs  http_git_server.rs  lib.rs  main.rs
gitstore-git-service/src/auth/: interceptor.rs  mod.rs
gitstore-git-service/src/git/: events.rs  hooks.rs  metrics.rs  mod.rs  pack_server.rs  repo.rs  tree_diff.rs
gitstore-git-service/src/git/hooks/: admission_handler.rs  mod.rs  validation_handler.rs
gitstore-git-service/src/grpc/: server.rs
gitstore-git-service/src/models/: parser.rs  reader.rs
gitstore-git-service/src/validation/: category.rs  collection.rs  errors.rs  mod.rs  product.rs  validator.rs
gitstore-git-service/src/websocket/: broadcast.rs  connections.rs
gitstore-git-service/tests/integration/: helpers.rs  hook_pipeline.rs  http_smart_protocol.rs  mod.rs  push_validation_test.rs  tag_notification_test.rs
(+746 files in other folders)
