[package]
name = "gitstore-server"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = { version = "0.84.0", features = ["max-performance-safe", "tree-editor", "blocking-network-client", "worktree-mutation"] }
gix-pack = "0.71.0"
dashmap = "6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14.3"
prometheus = { version = "0.14.0", features = ["process"] }
tokio-stream = "0.1.18"
tempfile = "3.8"
config = "0.15.22"
dotenvy = "0.15"

[dev-dependencies]

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "git-service"
path = "src/main.rs"

[lib]
name = "gitstore"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
